--- a/landing/app/views/courses/_course.html.erb
+++ b/landing/app/views/courses/_course.html.erb
@@ -81,31 +81,31 @@
   </div>
 
   <div id="Guitar">
-    <b style="color:black;font-size: 20px;">Guitar<br><br></b>
-    <b>Full Packages<br>
-    Level 1<br>
-    Level 2<br>
-    Level 3<br>
-    Level 4<br>
-    Songs</b>
+    <b style="color:black;font-size: 20px;">Guitar<br><br></b><b>
+    <a href="/" style="text-decoration: none; color: blue">Full Packages<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 1<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 2<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 3<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 4<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Songs</a></b>
   </div>
   <div id="Keyboard">
-    <b style="color:black;font-size: 20px;">Keyboard</b><br><br>
-    <b>Full Packages<br>
-    Level 1<br>
-    Level 2<br>
-    Level 3<br>
-    Level 4<br>
-    Songs</b>
+    <b style="color:black;font-size: 20px;">Keyboard</b><br><br><b>
+    <a href="/" style="text-decoration: none; color: blue">Full Packages<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 1<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 2<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 3<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 4<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Songs</a></b>
   </div>
   <div id="Vocals">
-    <b style="color:black;font-size: 20px;">Vocals</b><br><br>
-    <b>Full Packages<br>
-    Level 1<br>
-    Level 2<br>
-    Level 3<br>
-    Level 4<br>
-    Songs</b>
+    <b style="color:black;font-size: 20px;">Vocals</b><br><br><b>
+    <a href="/" style="text-decoration: none; color: blue">Full Packages<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 1<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 2<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 3<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Level 4<br></a>
+    <a href="/" style="text-decoration: none; color: blue">Songs</a></b>
   </div>
   <div id="Connect">
     <b style="color:black;font-size: 20px;">Connect</b><br><br>
@@ -120,6 +120,28 @@
   </div>
 </div>
 
+<div id="f22">
+<div id="f2">
+  <a href="https://play.google.com/store/apps/details?id=in.teachmore.soormalharclasses"><%= image_tag "get-it-on-play-store.png", style: 'width:15%;' %></a>
+  <a href="https://itunes.apple.com/in/app/soor-malhar/id1454214052"><%= image_tag "get-it-on-apple-store.png", style: 'width:15%;' %></a>
+</div>
+<br><br>
 
+<div id="f32">
+  <b>
+  <a href="/" style="text-decoration: none; color: lightgrey;">About Us&nbsp;</a>
+  <a href="/" style="text-decoration: none; color: lightgrey;">Contact Us&nbsp;</a>
+  <a href="/" style="text-decoration: none; color: lightgrey;">Sitemap&nbsp;</a>
+  <a href="/" style="text-decoration: none; color: lightgrey;">Terms & Conditions<br><br></a>
+  <a href="/" style="text-decoration: none; color: lightgrey;">Cancellations & Refunds&nbsp;</a>
+  <a href="/" style="text-decoration: none; color: lightgrey;">Privacy Policy</a></b>
+</div>
 
-<!-- </div>
+<a href="/" style="margin-left: 200px;">
+  <%= image_tag "soormalhar-logo-2.png", style: 'align:left;height:3vw;width:8vw' %></a>
+
+<b style="position: relative; left: 100%;text-align: right; color: grey; font-size: 18px;">© 2022 Soor Malhar Classes</b>
+
+<a href="https://www.teachmore.com/" style="position: relative; top:100px; left:20%">
+  <%= image_tag "tmlogo.png", style: 'height:3vw;width:8vw' %></a>
+</div>
