--- a/landing/app/views/home/_header.html.erb
+++ b/landing/app/views/home/_header.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div id="links">
-  <div class="ls"><a href="/"><b>Home</b></a></div>
+  <div class="ls"><a href="/" style="text-decoration: none;""><b>Home</b></a></div>
   <div class="ls"><a><b>All Courses</b></a></div>
   <div class="ls"><a><b>Posts</b></a></div>
   <div class="ls"><a><b>Log In</b></a></div>
